# the-binding-of-isaac-achievement-tracker

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  README.md  docker-compose.yaml  entrypoint.sh
.github/workflows/: ci.yaml
app/: Cargo.toml  isaac_youtubers.json
app/src/: main.rs  server.rs
app/src/controllers/: get_controller.rs  post_controller.rs
app/src/database/: database.rs
app/src/models/: achievement_image.rs  app_data.rs  character_unlocks.rs  cookie.rs  log.rs  mod.rs
app/src/views/: mod.rs
app/static/: IDEAS FOR ACHIEVEMENT TRACKER.docx
app/static/FAQs/: FAQs.docx
app/static/achievements/: achievement_conditions.json
app/static/completion marks/: completion marks.clip
app/static/devlog/: BG.clip  Devlog_Panel.clip  errorkeeper.clip
app/static/error/: errorkeeper.clip
app/static/error popups/: Error_Popup.clip
app/static/news/: Windows.clip
app/static/profile/: Online_Offline_Dots.clip
app/static/site mockups/: Mobile_Design.clip  News_Design.clip
nginx/remote/: site.conf
src/: main.rs  server.rs
src/controllers/: get_controller.rs  mod.rs  post_controller.rs  utils.rs
src/models/: achievement_image.rs  app_state.rs  cookie.rs  mod.rs
src/models/requests/: dashboard.rs
src/models/responses/: dashboard.rs  error.rs
src/models/steam_api/: mod.rs  player_info.rs  player_summaries.rs  profile_search.rs  (+1 more)
src/views/: mod.rs
static/footer/: Footer_Design.clip
static/navbar/: navbar.clip
static/news/: Corners.clip
static/profile search/: search bar.clip
static/site mockups/: Dash_Design.clip
(+56 files in other folders)
