[package]
name = "tboi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
askama = "0.12.1"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = "0.11.26"
serde = { version="1.0.197", features=["derive"] }
serde_json = "1.0.114"
